<resources>
    <string name="app_name">MenuApp</string>
    <string name="txtbienv">Hola!</string>
    <string name="txtbienv2">Conoce sobre nuestros servicios</string>
    <string name="txtagendar">CONTRATAR SERVICIOS</string>
    <string name="txtcompra">VER PRODUCTOS</string>
    <string name="txtterms">CONSÚLTANOS</string>
    <string name="txtserv">SOBRE NOSOTROS</string>
    <string name="txtsalir">CERRAR SESIÓN</string>
    <string name="titulo">SELECCIONA UNA OPCIÓN</string>
    <string name="productos">PRODUCTOS POPULARES</string>
    <string name="piepag">Escuela Profesional de Ingeniería de Sistemas - Universidad César Vallejo</string>
    <string name="tvnom">NOMBRES:</string>
    <string name="tvap">APELLIDOS:</string>
    <string name="tvcel">CELULAR:</string>
    <string name="tvemail">EMAIL:</string>
    <string name="txtuser">Email</string>
    <string name="txtname">Nombre</string>
    <string name="txtpass">Contraseña</string>
    <string name="btnlogin1">TENGO UNA CUENTA</string>
    <string name="btnlogin2">REGISTRARSE</string>
    <string name="btnlogin3">INICIAR SESIÓN</string>
    <string name="txtid">SERVICIO TÉCNICO TRUJILLO</string>
    <string name="txtid2">FORMULARIO CONSULTAS A NIVEL NACIONAL</string>
    <string name="tvinf">INFORMACIÓN PERSONAL:</string>
    <string name="hnom">Ingrese sus nombres</string>
    <string name="hap">Ingrese sus apellidos</string>
    <string name="hcel">Ingrese su celular</string>
    <string name="hemail">Ingrese su email</string>
    <string name="txtfideo1">Spaghetti Lavaggi Paquete (20 Unidades 500g)</string>
    <string name="txtfideo2">Fideos</string>
    <string name="txtfideo3">S/.66.00</string>
    <string name="txtarroz1">Arroz Faraón Rojo 50 Kg</string>
    <string name="txtarroz2">Arroces</string>
    <string name="txtarroz3">S/.162.00</string>
    <string name="txtaceite1">Aceite Belini Premium Caja (12 Botellas 900 Ml)</string>
    <string name="txtaceite2">Aceites</string>
    <string name="txtaceite3">S/.119.00</string>
    <string name="txtleche1">Leche Gloria Entera Azul UHT Caja (12 Envases De 1 Litro)</string>
    <string name="txtleche2">Lácteos</string>
    <string name="txtleche3">S/.58.00</string>
    <string name="txtharina1">Harina De Maíz PAN Paquete (20 Unidades 1 Kg)</string>
    <string name="txtharina2">Harinas</string>
    <string name="txtharina3">S/.130.00</string>
    <string name="txtatun1">Filete De Atún Campomar Caja (24 Unidades)</string>
    <string name="txtatun2">Pescado en conserva</string>
    <string name="txtatun3">S/.130.00</string>
    <string name="tvsolic">SOLICITUD:</string>
    <string name="tvtipo">TIPO DE SERVICIO:</string>
    <string name="tvcoment">DESCRIBIR:</string>
    <string name="tvdom">DOMICILIO:</string>
    <string name="tvciudad">CIUDAD:</string>
    <string name="tvreferencia">REFERENC.:</string>
    <string name="tvdepartamento">DEPARTAMENTO:</string>
    <string name="tvprovincia">PROVINCIA:</string>
    <string name="tvdistrito">DISTRITO:</string>
    <string name="tvubica">UBICACIÓN:</string>
    <string name="hcoment">Motivo de la comunicación</string>
    <string name="hdom">Ingrese su dirección</string>
    <string name="hciudad">Ingrese su Ciudad</string>
    <string name="hreferencia">Ingrese alguna referencia</string>
    <string name="rb1">Casa</string>
    <string name="rb2">Oficina</string>
    <string name="btn1">ENVIAR FORMULARIO</string>
    <string name="titumenuform">SELECCIONE EL TIPO DE SERVICIO</string>
    <string name="opcmenu1">LA LIBERTAD-TRUJILLO</string>
    <string name="opcmenu2">NIVEL NACIONAL</string>
    <string name="bdepartamentos">Selecciona tu departamento</string>
    <string-array name="tiposervi">
        <item> Selecciona una opción</item>
        <item>Consulta de productos</item>
        <item>Proforma</item>
        <item>Proveedor</item>
        <item>Negocio Externo</item>
    </string-array>
    <string-array name="ubicacion">
        <item> Selecciona una opción</item>
        <item>Casa</item>
        <item>Tienda</item>
        <item>Bodega</item>
    </string-array>
    <string-array name="distrujilloform2">
        <item>Selecciona tu Distrito</item>
        <item>Trujillo</item>
        <item>El Porvenir</item>
        <item>Florencia de Mora</item>
        <item>Huanchaco</item>
        <item>La Esperanza</item>
        <item>Laredo</item>
        <item>Moche</item>
        <item>Poroto</item>
        <item>Salaverry</item>
        <item>Simbal</item>
        <item>Victor Larco Herrera</item>
    </string-array>
    <string-array name="departamentosperu">
        <item> Selecciona tu Departamento</item>
        <item>Amazonas</item>
        <item>Ancash</item>
        <item>Apurímac</item>
        <item>Arequipa</item>
        <item>Ayacucho</item>
        <item>Cajamarca</item>
        <item>Callao</item>
        <item>Cusco</item>
        <item>Huancavelica</item>
        <item>Huánuco</item>
        <item>Ica</item>
        <item>Junín</item>
        <item>La Libertad</item>
        <item>Lambayeque</item>
        <item>Lima</item>
        <item>Loreto</item>
        <item>Madre de Dios</item>
        <item>Moquegua</item>
        <item>Pasco</item>
        <item>Piura</item>
        <item>Puno</item>
        <item>San Martín</item>
        <item>Tacna</item>
        <item>Tumbes</item>
        <item>Ucayali</item>
    </string-array>
    <string-array name="provinciasperu">
        <item>Selecciona tu Provincia</item>
    </string-array>
    <string-array name="provamazonas">
        <item>Selecciona tu Provincia</item>
        <item>Chachapoyas</item>
        <item>Bagua</item>
        <item>Bongará</item>
        <item>Condorcanqui</item>
        <item>Luya</item>
        <item>Rodriguez de Mendoza</item>
        <item>Utcubamba</item>
    </string-array>
    <string-array name="provancash">
        <item>Selecciona tu Provincia</item>
        <item>Huáraz</item>
        <item>Aija</item>
        <item>Antonio Raymondi</item>
        <item>Asunción</item>
        <item>Bolognesi</item>
        <item>Carhuáz</item>
        <item>Carlos Fermín Fitzcarrald</item>
        <item>Casma</item>
        <item>Corongo</item>
        <item>Huári</item>
        <item>Huarmey</item>
        <item>Huaylas</item>
        <item>Mariscal Luzuriaga</item>
        <item>Ocros</item>
        <item>Pallasca</item>
        <item>Casma</item>
        <item>Pomabamba</item>
        <item>Recuay</item>
        <item>Santa</item>
        <item>Sihuas</item>
        <item>Llungay</item>
    </string-array>
    <string-array name="provapurimac">
        <item>Selecciona tu Provincia</item>
        <item>Abancay</item>
        <item>Andahuaylas</item>
        <item>Antabamba</item>
        <item>Aymacraes</item>
        <item>Cotabambas</item>
        <item>Chincheros</item>
        <item>Grau</item>
    </string-array>
    <string-array name="provarequipa">
        <item>Selecciona tu Provincia</item>
        <item>Arequipa</item>
        <item>Camaná</item>
        <item>Caravelí</item>
        <item>Castilla</item>
        <item>Caylloma</item>
        <item>Condesuyos</item>
        <item>Islay</item>
        <item>La Unión</item>
    </string-array>
    <string-array name="provayacucho">
        <item>Selecciona tu Provincia</item>
        <item>Huamanga</item>
        <item>Cangallo</item>
        <item>Huanca Sancos</item>
        <item>Huanta</item>
        <item>La Mar</item>
        <item>Lucanas</item>
        <item>Parinacochas</item>
        <item>Páucar del Sara Sara</item>
        <item>Sucre</item>
        <item>Victor Fajardo</item>
        <item>Vilcas Huamán</item>
    </string-array>
    <string-array name="provcajamarca">
        <item>Selecciona tu Provincia</item>
        <item>Cajamarca</item>
        <item>Cajabamba</item>
        <item>Celedín</item>
        <item>Chota</item>
        <item>Contuzamá</item>
        <item>Cutervo</item>
        <item>Hualgayoc</item>
        <item>Jaén</item>
        <item>San Ignacio</item>
        <item>San Marcos</item>
        <item>San Miguel</item>
        <item>San Pablo</item>
        <item>Santa Cruz</item>
    </string-array>
    <string-array name="provcallao">
        <item>Selecciona tu Provincia</item>
        <item>Prov. Const. Callao</item>
    </string-array>
    <string-array name="provcusco">
        <item>Selecciona tu Provincia</item>
        <item>Cusco</item>
        <item>Acomayo</item>
        <item>Anta</item>
        <item>Calca</item>
        <item>Canas</item>
        <item>Canchis</item>
        <item>Chumbivilcas</item>
        <item>Espinar</item>
        <item>La Convención</item>
        <item>Paruro</item>
        <item>Paucartambo</item>
        <item>Quispicanchi</item>
        <item>Urubamba</item>
    </string-array>
    <string-array name="provhuancavelica">
        <item>Selecciona tu Provincia</item>
        <item>Huancavelica</item>
        <item>Acobamba</item>
        <item>Angaraes</item>
        <item>Castrovirreyna</item>
        <item>Churcampa</item>
        <item>Huaytará</item>
        <item>Tayacaja</item>
    </string-array>
    <string-array name="provhuánuco">
        <item>Selecciona tu Provincia</item>
        <item>Huánuco</item>
        <item>Ambo</item>
        <item>Dos de Mayo</item>
        <item>Huacaybamba</item>
        <item>Huamalíes</item>
        <item>Leoncio Prado</item>
        <item>Marañón</item>
        <item>Pachitea</item>
        <item>Puerto Inca</item>
        <item>Lauricocha</item>
        <item>Yarowilca</item>
    </string-array>
    <string-array name="provica">
        <item>Selecciona tu Provincia</item>
        <item>Ica</item>
        <item>Chincha</item>
        <item>Nazca</item>
        <item>Palpa</item>
        <item>Pisco</item>
    </string-array>
    <string-array name="provjunín">
        <item>Selecciona tu Provincia</item>
        <item>Huancayo</item>
        <item>Concepción</item>
        <item>Chanchamayo</item>
        <item>Jauja</item>
        <item>Junín</item>
        <item>Satipo</item>
        <item>Tarma</item>
        <item>Yauli</item>
        <item>Chupaca</item>
    </string-array>
    <string-array name="provlalibertad">
        <item>Selecciona tu Provincia</item>
        <item>Trujillo</item>
        <item>Ascope</item>
        <item>Bolívar</item>
        <item>Chepén</item>
        <item>Julcán</item>
        <item>Otuzco</item>
        <item>Pacasmayo</item>
        <item>Pataz</item>
        <item>Sánchez Carrión</item>
        <item>Santiago de Chuco</item>
        <item>Gran Chimú</item>
        <item>Virú</item>
    </string-array>
    <string-array name="provlambayeque">
        <item>Selecciona tu Provincia</item>
        <item>Chiclayo</item>
        <item>Ferreñafe</item>
        <item>Lambayeque</item>
    </string-array>
    <string-array name="provlima">
        <item>Selecciona tu Provincia</item>
        <item>Lima</item>
        <item>Barranca</item>
        <item>Cajatambo</item>
        <item>Canta</item>
        <item>Cañete</item>
        <item>Huaral</item>
        <item>Huarochirí</item>
        <item>Huaura</item>
        <item>Oyón</item>
        <item>Yauyos</item>
    </string-array>
    <string-array name="provloreto">
        <item>Selecciona tu Provincia</item>
        <item>Maynas</item>
        <item>Alto Amazonas</item>
        <item>Loreto</item>
        <item>Mariscal Ramón Castilla</item>
        <item>Requena</item>
        <item>Ucayali</item>
        <item>Datem del Marañón</item>
        <item>Putumayo</item>
    </string-array>
    <string-array name="provmadrededios">
        <item>Selecciona tu Provincia</item>
        <item>Tambopata</item>
        <item>Manu</item>
        <item>Tahuamanu</item>
    </string-array>
</resources>