<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".InicioSes">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginTop="54dp"
            app:srcCompat="@drawable/dioralizlogo" />


        <EditText
            android:id="@+id/edtuser3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:ems="10"
            android:hint="@string/txtuser"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/edtpass3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:ems="10"
            android:hint="@string/txtpass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#000000" />


        <Button
            android:id="@+id/botonlogin3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/botonredondeado"
            android:text="@string/btnlogin3"
            android:textColor="#000000" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>